--- a/Practice12_Compare/.project
+++ b/Practice12_Compare/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>02. Java</name>
+	<name>Practice12_Compare</name>
 	<comment></comment>
 	<projects>
 	</projects>
